# zip-tree

./: BUILD.md  CMakeLists.txt  CMakeLists.txt.windows  IMPROVEMENTS.md  LAUNCH.md  PROJECT_STEPS.md  QUICKSTART.md  README.md  SETUP_REQUIREMENTS.md  launch-browser.ps1  launch-web.ps1  launch.ps1  package.json  server.js  server.py  test-frontend.ps1
backend/include/: http_server.hpp  zip_parser.hpp
backend/src/: http_server.cpp  main.cpp  zip_parser.cpp
frontend/: app.js  index.html  style.css
